<resources>
    <string name="app_name">PMAY Housing For All</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Logout</string>
    <string name="action_action_about">Sync Records</string>
    <string name="action_action_new_survey">New Survey</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="survey">Survey</string>
    <string name="txt_slum">Slum</string>
    <string name="txt_non_slum">Non Slum</string>
    <string name="eligibility">Eligibility for the scheme</string>
    <string name="prompt">Select ID Proof</string>
    <string name="confirm_title">Confirmation</string>
    <string name="msg_scanner_not_connected">Please connect finger print device with the phone</string>
    <string name="msg_scanner_finger_error">Please place your finger correctly</string>
    <string name="msg_scanner_ready">Please place your finger on the tip of scanner</string>
    <string name="msg_finger_success">Successfully captured your finger print</string>
    <string name="msg_scanner_initialising">Please wait.. connecting finger print device with the phone</string>
    <string name="confirm_attachment">Select Attachment</string>
    <string name="confirm_message">You have successfully created an account. Once Admin will approve, password will be sent to your registered Mobile No/Email ID.</string>
    <string name="register_fail_message">Failed to create your account. Please try again</string>
    <string name="logout_message">Are you sure you want to logout from PMAY application?</string>
    <string name="save_message_success">Survey data has been saved successfully</string>
    <string name="save_message_fail">Fail to save the Survey data. Please try again</string>
    <string name="submit_message_success">Survey data has been submitted succesfully</string>
    <string name="submit_message_fail">Failed to submit the Survey data. Please try again</string>
    <string name="save_message_offline">You are offline, survey data is saved locally</string>
    <string name="save_message_low_network">Low network bandwidth, survey data is saved locally</string>
    <string name="you_are_offline_please_check_your_internet_connection">"You are offline, Please check your internet connection."</string>
    <string name="submit_message_verify">Please make sure the information provided by you are valid and attachments are validated before submitting the survey data. \n\nDo you want to verify the documents later?</string>
    <string name="offline_save_option">Internet connection is mandatory for submit data. Please make sure to save the data as offline using Save button.</string>
    <string name="survey_id_display">Please save the survey ID for future reference.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit_non_slum_message">Is validation pending?</string>
    <string name="submit_slum_message">Are you sure to submit the form now?</string>
    <string-array name="years_stay_arrays">
        <item>Years of Stay</item>
        <item>0 to 1 Year</item>
        <item>1 to 3 Years</item>
        <item>3 to 5 Years</item>
        <item>Above 5 Years</item>
    </string-array>
    <string-array name="ownership_arrays">
        <item>Ownership Status</item>
        <item>Own</item>
        <item>Rent</item>
        <item>Others</item>
    </string-array>
    <string-array name="house_arrays_roof">
        <item>House based on Roof Type</item>
        <item>Pucca/Cement concrete</item>
        <item>semi-Pucca/CGI sheet</item>
        <item>Katcha/Thached/Tarpaulin</item>
        <item>Semi-Kutcha/CGI/Plank walling/Leirang taba</item>
    </string-array>
    <string-array name="house_arrays_wall">
        <item>House based on Wall Type</item>
        <item>Pucca/Brick Wall</item>
        <item>semi-Pucca/Half Brick/Full Ecra Wall</item>
        <item>Katcha/Phaklong/Plastic/Tarpaulin</item>
        <item>Others</item>
    </string-array>
    <string-array name="employment_arrays">
        <item>Employment Status</item>
        <item>Self Employed</item>
        <item>Salaried</item>
        <item>Regular Wage</item>
        <item>Labour</item>
        <item>Others</item>
    </string-array>
    <string-array name="house_req_arrays">
        <item>Housing Requirement</item>
        <item>New House</item>
        <item>Enhancement</item>
    </string-array>
    <string-array name="bank_names">
        <item>Bank Name</item>
        <item>Allahabad Bank</item>
        <item>Karur Vysya Bank</item>
        <item>Andhra Bank</item>
        <item>Kotak Bank</item>
        <item>Axis Bank</item>
        <item>Laxmi Vilas Bank</item>
        <item>Bank of Baroda</item>
        <item>Odisha State</item>
        <item>Cooperative Bank</item>
        <item>Bank of India</item>
        <item>Oriental Bank of Commerce</item>
        <item>Bank of Maharashtra</item>
        <item>Punjab and Sind Bank</item>
        <item>Canara Bank</item>
        <item>Punjab National Bank</item>
        <item>Central Bank of India</item>
        <item>Shamrao Vitthal Co-operative Bank</item>
        <item>City Union Bank</item>
        <item>South Indian Bank</item>
        <item>Corporation Bank</item>
        <item>State Bank of Bikaner and Jaipur</item>
        <item>Deutsche Bank</item>
        <item>State Bank of Hyderabad</item>
        <item>Development Credit Bank</item>
        <item>State Bank of India</item>
        <item>Dhanlaxmi Bank</item>
        <item>State Bank of Mysore</item>
        <item>Federal Bank</item>
        <item>State Bank of Patiala</item>
        <item>HDFC Bank</item>
        <item>State Bank of Travancore</item>
        <item>HDFC BANK LTD</item>
        <item>Syndicate Bank</item>
        <item>ICICI Bank</item>
        <item>Tamilnad Mercantile Bank Ltd</item>
        <item>IDBI Bank</item>
        <item>UCO Bank</item>
        <item>Indian Bank</item>
        <item>Union Bank of India</item>
        <item>Indian Overseas Bank</item>
        <item>nited Bank of India</item>
        <item>IndusInd Bank</item>
        <item>Utkal Grameen Bank</item>
        <item>ING Vysya Bank</item>
        <item>Vijaya Bank</item>
        <item>Jammu and Kashmir Bank</item>
        <item>Yes Bank Ltd</item>
        <item>Karnataka Bank Ltd</item>
        <item>Other</item>
    </string-array>
    <string-array name="ulb_names_array">
        <item>ULB Name</item>
        
        <item>Bhubaneswar(MC)</item>
        
    </string-array>
    <string-array name="id_proof_arrays">
        <item>Any Other ID Proof</item>
        <item>Aadhar</item>
        <item>Voter ID</item>
        <item>BPL Card</item>
        <item>Bank Passbook</item>
        <item>Others</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="relation_arrays">
        <item>Relationship</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Spouse</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>GrandSon</item>
        <item>GrandDaughter</item>
        <item>Others</item>
    </string-array>
    <string-array name="mission_arrays">
        <item>Preferred component of Mission</item>
        <item>Credit Linked Subsidy Scheme</item>
        <item>Affordable Housing In Partnership</item>
        <item>Beneficiary LED Construction</item>
    </string-array>
    <string-array name="vehicle_arrays">
        <item>Vehicle Type</item>
        <item>2 Wheeler</item>
        <item>3 Wheeler</item>
        <item>4 Wheeler</item>
        <item>LCV/Heavy(Mini truck/truck/tractor/bus)</item>
    </string-array>
    <string-array name="marital_arrays">
        <item>Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Widow</item>
        <item>Widower</item>
        <item>Divorcee</item>
    </string-array>
    <string-array name="caste_arrays">
        <item>Caste</item>
        <item>General</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
    </string-array>
    <string-array name="religion_arrays">
        <item>Religion</item>
        <item>Hindu</item>
        <item>Muslim</item>
        <item>Christian</item>
        <item>Sikh</item>
        <item>Jainism</item>
        <item>Buddhism</item>
        <item>Zoroastrianism</item>
        <item>Others</item>
    </string-array>
    <string name="creatw_new_acc">Create New Account</string>
    <string name="create_new_acc">Don\'t have an account ?\nCreate New Account</string>
    <string name="heading_scheme_title">Welcome to Pradhan Mantri Awas Yojana \nHousing For All</string>
    <string name="heading_scheme_title2">Welcome to Pradhan Mantri Awas Yojana \nHousing For All</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>