<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="PMAYHomeScrenActivity">

    <item android:id="@+id/action_new_survey" android:title="@string/action_action_new_survey"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />

    <item android:id="@+id/action_upload_offline" android:title="Upload Offline Records"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />

    <item android:id="@+id/action_sync" android:title="@string/action_action_about"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />

    <item android:id="@+id/action_logout" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_about_menu" android:title="About"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_menu_logging" android:title="Enable Logs"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="search by Aadhar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />


</menu>
