<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageView
            android:src="@drawable/pmay_logo"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/heading_scheme_title"
            android:fontFamily="cursive"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAppearance="@android:style/TextAppearance.Material.Headline" />
        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:inputType="textEmailAddress"
                android:text="9710701900"
                android:hint="Mobile/Email" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:text="Show Password"
            android:id="@+id/show_pwd"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:checked="false"
            android:textColor="@color/textDarkPrimary"
            android:textSize="14dp"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginRight="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:passwordToggleTintMode ="src_over"
            app:passwordToggleEnabled="true"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginBottom="6dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:paddingBottom="20dp"
                android:inputType="textPassword"
                android:text="RU@236sa"
                android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:text="@string/remember_me"
            android:id="@+id/remember_chk"
            android:checked="false"
            android:textColor="@color/textDarkPrimary"
            android:textSize="14dp"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forgot_pwd"
            android:layout_width="match_parent"
            android:text="@string/forgot_pwd"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="@color/textDarkPrimary"
            android:clickable="true"
            android:textAllCaps="false"
            android:gravity="right"
            android:paddingRight="8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:layout_height="wrap_content" />

    </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:padding="15dp"
            android:text="  Sign In  "/>


        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:autoLink="all"
            android:layout_marginTop="@dimen/activity_text_margin"
            android:text="@string/create_new_acc"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textSize="15dip"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/awaas_logo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:layout_height="78dp"
                android:layout_marginLeft="-52dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:layout_gravity="left" />

            <ImageView
                android:src="@drawable/choice_logo"
                android:paddingTop="10dp"
                android:layout_marginTop="12dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp"
                android:layout_marginRight="-57dp"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="-25dp"
                android:gravity="right"
                android:layout_gravity="right" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>